[package]
name = "http-proxy"
version = "0.1.0"
authors = ["Eric Seppanen <eds@reric.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1.1", features = ["io-util", "macros", "net", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
httparse = "1.3"
toml = "0.5"
tokio-rustls = "0.22"
